[package]
name = "in-container"
version = "1.1.0"
edition = "2018"
authors = ["Pit Kleyersburg <pitkley@googlemail.com>"]
license = "MIT/Apache-2.0"
description = "Determines if it is running in a container"
homepage = "https://github.com/pitkley/in-container"
repository = "https://github.com/pitkley/in-container.git"
readme = "README.md"

categories = ["command-line-utilities"]
keywords = ["container", "cli", "docker", "lxc"]

include = [
    "**/*.rs",
    "LICENSE-*",
]

[[bin]]
name = "in-container"
path = "src/main.rs"
required-features = ["exe"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]

[dependencies.clap]
version = "3.2.13"
features = ["cargo", "derive"]
optional = true

[target.x86_64-pc-windows-gnu.dependencies]
winreg = "0.10.1"
windows-service = "0.4.0"

[target.x86_64-unknown-freebsd.dependencies]
sysctl = "0.4.4"

[features]
default = ["exe"]
exe = ["clap"]
